add compiled presentation html

--- a/eresearch-presentation/eresearch-presentation.html
+++ b/eresearch-presentation/eresearch-presentation.html
@@ -14,58 +14,63 @@
 <div class="reveal">
 <div class="slides">
 <section>
-<section id="slide-orgf523e78">
-<h2 id="orgf523e78">Modernising Earthquake Simulation Workflows</h2>
+<section id="slide-orga865793">
+<h2 id="orga865793">Modernising Earthquake Simulation Workflows</h2>
 <p>
 Jake Faulkner
 </p>
-<div style="display: grid; grid-template-columns: auto auto auto;">
+<div style="display: grid; grid-template-columns: auto auto auto auto;">
 
-<div id="org3d0c636" class="figure">
+<div id="org0f3c76e" class="figure">
 <p><img src="coat-of-arms-uc.jpeg" alt="coat-of-arms-uc.jpeg" width="80%" />
 </p>
 </div>
 
-<div id="orgf7c9f38" class="figure">
-<p><img src="coat-of-arms-uc.jpeg" alt="coat-of-arms-uc.jpeg" width="80%" />
+<div id="orgb0249a1" class="figure">
+<p><img src="QCLogo Standard QC 3 lines 2000ppi.png" alt="QCLogo Standard QC 3 lines 2000ppi.png" width="80%" />
 </p>
 </div>
 
-<div id="org2ab78a6" class="figure">
-<p><img src="coat-of-arms-uc.jpeg" alt="coat-of-arms-uc.jpeg" width="80%" />
+<div id="orgaeeadb8" class="figure">
+<p><img src="nhc.png" alt="nhc.png" width="80%" />
+</p>
+</div>
+
+<div id="org840fda3" class="figure">
+<p><img src="NeSI_Logo_RGB.png" alt="NeSI_Logo_RGB.png" width="80%" />
 </p>
 </div>
 </div>
 </section>
 </section>
 <section>
-<section id="slide-org0eed923">
-<h2 id="org0eed923">Context</h2>
-<div class="outline-text-2" id="text-org0eed923">
+<section id="slide-orga5d89ca">
+<h2 id="orga5d89ca">Context</h2>
+<div class="outline-text-2" id="text-orga5d89ca">
 </div>
 </section>
-<section id="slide-org3434519">
-<h3 id="org3434519">What We Do</h3>
+<section id="slide-org4c2dfb1">
+<h3 id="org4c2dfb1">What We Do</h3>
 <ul>
 <li>Support earthquake researchers at UC Civil and Natural Resources Engineering department.</li>
 <li>Primary focus: Ground motion simulation software.</li>
 
 </ul>
 </section>
-<section id="slide-org45789b3">
-<h3 id="org45789b3">Cybershake New Zealand</h3>
+<section id="slide-org6dae8f7">
+<h3 id="org6dae8f7">Cybershake New Zealand</h3>
 <iframe height="600" width="800" src="https://www.youtube.com/embed/P7t2u61daPg?si=lIqavPHDV0hXl-Gu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </section>
-<section id="slide-org4b850b7">
-<h3 id="org4b850b7">Researcher Outputs</h3>
+<section id="slide-org2844c67">
+<h3 id="org2844c67">Researcher Outputs</h3>
 
-<div id="org6ff2eb3" class="figure">
+<div id="orgfdeba35" class="figure">
 <p><img src="researcher.png" alt="researcher.png" />
 </p>
 </div>
 </section>
-<section id="slide-orgf86c98a">
-<h3 id="orgf86c98a">Big Picture</h3>
+<section id="slide-org29be03f">
+<h3 id="org29be03f">Big Picture</h3>
 <dl>
 <dt class="fragment fade-in">Cybershake NZ</dt><dd class="fragment fade-in">Better estimates of seismic hazard; inform EQC and disaster response.</dd>
 <dt class="fragment fade-in">Researcher outputs</dt><dd class="fragment fade-in">Advance geoscience; improve Cybershake.</dd>
@@ -74,21 +79,21 @@ Jake Faulkner
 </section>
 </section>
 <section>
-<section id="slide-org939dfe8">
-<h2 id="org939dfe8">The Old Simulation Stack</h2>
-<div class="outline-text-2" id="text-org939dfe8">
+<section id="slide-org5d983c2">
+<h2 id="org5d983c2">The Old Simulation Stack</h2>
+<div class="outline-text-2" id="text-org5d983c2">
 </div>
 </section>
-<section id="slide-org66399b5">
-<h3 id="org66399b5">Basic Structure</h3>
+<section id="slide-org9b4de1f">
+<h3 id="org9b4de1f">Basic Structure</h3>
 
-<div id="org53ac52c" class="figure">
+<div id="org9402c9f" class="figure">
 <p><img src="old_workflow.png" alt="old_workflow.png" />
 </p>
 </div>
 </section>
-<section id="slide-orgd9ddfcc">
-<h3 id="orgd9ddfcc">The Problems</h3>
+<section id="slide-org910a63e">
+<h3 id="org910a63e">The Problems</h3>
 <ul>
 <li class="fragment fade-in">Cybershake-centric, unfriendly to researchers.</li>
 <li class="fragment fade-in">Entirely custom solutions for solved problems.</li>
@@ -99,8 +104,8 @@ Jake Faulkner
 </section>
 <section>
 </section>
-<section id="slide-org519818d">
-<h3 id="org519818d">Reproducing a Three-Year-Old Simulation</h3>
+<section id="slide-orgb620d40">
+<h3 id="orgb620d40">Reproducing a Three-Year-Old Simulation</h3>
 <ol>
 <li class="fragment fade-in">Required our team lead one year,</li>
 <li class="fragment fade-in">Involved special tools to re-derive input values,</li>
@@ -108,20 +113,20 @@ Jake Faulkner
 
 </ol>
 
-<div id="org26ff592" class="figure">
+<div id="orga79c80a" class="figure">
 <p><img src="sung.jpg" alt="sung.jpg" class="fragment (fade-in)" />
 </p>
 </div>
 </section>
 </section>
 <section>
-<section id="slide-orgc7d29bc">
-<h2 id="orgc7d29bc">The New Workflow</h2>
-<div class="outline-text-2" id="text-orgc7d29bc">
+<section id="slide-org852844a">
+<h2 id="org852844a">The New Workflow</h2>
+<div class="outline-text-2" id="text-org852844a">
 </div>
 </section>
-<section id="slide-orgd4fad4a">
-<h3 id="orgd4fad4a">Container + Workflow + Realisation = Simulation</h3>
+<section id="slide-org62dcd88">
+<h3 id="org62dcd88">Container + Workflow + Realisation = Simulation</h3>
 <ul>
 <li><b>Container</b>: Reproducible software stack specification.</li>
 <li><b>Workflow</b>: Declarative software execution control.</li>
@@ -129,8 +134,8 @@ Jake Faulkner
 
 </ul>
 </section>
-<section id="slide-org03175a6">
-<h3 id="org03175a6">Containerisation</h3>
+<section id="slide-org920c6d1">
+<h3 id="org920c6d1">Containerisation</h3>
 <ul>
 <li>Apptainer containers for software deployment.</li>
 <li>All workflow stages within containers.</li>
@@ -138,8 +143,8 @@ Jake Faulkner
 
 </ul>
 </section>
-<section id="slide-org6e3b347">
-<h3 id="org6e3b347">Cylc Workflows</h3>
+<section id="slide-org332f2b6">
+<h3 id="org332f2b6">Cylc Workflows</h3>
 <div style="float: left; width: 50%">
 <ul>
 <li class="fragment fade-in">Developed at NIWA.</li>
@@ -152,17 +157,17 @@ Jake Faulkner
 
 <div style="float: right; width: 50%">
 
-<div id="org874ea51" class="figure">
+<div id="org5fd8caf" class="figure">
 <p><img src="cylc.gif" alt="cylc.gif" />
 </p>
 <p><span class="figure-number">Figure 1: </span>Cylc TUI in Action!</p>
 </div>
 </div>
 </section>
-<section id="slide-org57f6733">
-<h3 id="org57f6733">One-File Simulation Specification</h3>
+<section id="slide-orgbade864">
+<h3 id="orgbade864">One-File Simulation Specification</h3>
 
-<div id="org0ac056b" class="figure">
+<div id="orgde5746a" class="figure">
 <p><img src="config.png" alt="config.png" />
 </p>
 </div>
@@ -197,8 +202,8 @@ Jake Faulkner
 </pre>
 </div>
 </section>
-<section id="slide-orgf87851d">
-<h3 id="orgf87851d">Workflow Planner</h3>
+<section id="slide-orgbba0430">
+<h3 id="orgbba0430">Workflow Planner</h3>
 <ul>
 <li>Workflow stages that compose together enables a flexible workflow planning tool.</li>
 <li>Skip or set a goal for any stage to generate custom research workflows!</li>
@@ -225,13 +230,20 @@ Jake Faulkner
 </section>
 <section>
 
-<div id="org88aeaf9" class="figure">
+<div id="org050c9ef" class="figure">
 <p><img src="workflow_graph.png" alt="workflow_graph.png" />
 </p>
 </div>
 </section>
-<section id="slide-org3a1fef1">
-<h3 id="org3a1fef1">Hypothesis Testing</h3>
+<section id="slide-org5f639f0">
+<h3 id="org5f639f0">Hypothesis Testing</h3>
+<ul>
+<li>Used to test thousands of examples for critical scientific code.</li>
+<li>Potentially saves hundreds of thousands of wasted core-hours.</li>
+
+</ul>
+</section>
+<section>
 <div class="org-src-container">
 
 <pre class="src src-python"><span style="color: #ECBE7B;">@given</span>(st.integers(<span style="color: #da8548; font-weight: bold;">0</span>, <span style="color: #da8548; font-weight: bold;">50</span>))
@@ -242,7 +254,7 @@ Jake Faulkner
 </div>
 </section>
 <section>
-<pre class="example" id="org5eea873">
+<pre class="example" id="org5ab72e2">
 n = 40
 
     @given(st.integers(0, 50))
@@ -251,17 +263,10 @@ n = 40
 E       assert False
 </pre>
 </section>
-<section>
-<ul>
-<li>Used to test thousands of examples for critical scientific code.</li>
-<li>Potentially saves hundreds of thousands of wasted core-hours.</li>
-
-</ul>
-</section>
 </section>
 <section>
-<section id="slide-org2787f86">
-<h2 id="org2787f86">Key Takeaways</h2>
+<section id="slide-orga515b0c">
+<h2 id="orga515b0c">Key Takeaways</h2>
 <ul>
 <li class="fragment fade-in">Make your workflows <b>declarative</b>.</li>
 <li class="fragment fade-in">Make your workflows <b>composable</b>.</li>
