fix researcher field pictures

--- a/eresearch-presentation/eresearch-presentation.html
+++ b/eresearch-presentation/eresearch-presentation.html
@@ -14,29 +14,29 @@
 <div class="reveal">
 <div class="slides">
 <section>
-<section id="slide-orga865793">
-<h2 id="orga865793">Modernising Earthquake Simulation Workflows</h2>
+<section id="slide-orgeb78819">
+<h2 id="orgeb78819">Modernising Earthquake Simulation Workflows</h2>
 <p>
 Jake Faulkner
 </p>
 <div style="display: grid; grid-template-columns: auto auto auto auto;">
 
-<div id="org0f3c76e" class="figure">
+<div id="org26afbc5" class="figure">
 <p><img src="coat-of-arms-uc.jpeg" alt="coat-of-arms-uc.jpeg" width="80%" />
 </p>
 </div>
 
-<div id="orgb0249a1" class="figure">
+<div id="org6b08a17" class="figure">
 <p><img src="QCLogo Standard QC 3 lines 2000ppi.png" alt="QCLogo Standard QC 3 lines 2000ppi.png" width="80%" />
 </p>
 </div>
 
-<div id="orgaeeadb8" class="figure">
+<div id="org7f7f196" class="figure">
 <p><img src="nhc.png" alt="nhc.png" width="80%" />
 </p>
 </div>
 
-<div id="org840fda3" class="figure">
+<div id="orgf71c2ad" class="figure">
 <p><img src="NeSI_Logo_RGB.png" alt="NeSI_Logo_RGB.png" width="80%" />
 </p>
 </div>
@@ -44,33 +44,33 @@ Jake Faulkner
 </section>
 </section>
 <section>
-<section id="slide-orga5d89ca">
-<h2 id="orga5d89ca">Context</h2>
-<div class="outline-text-2" id="text-orga5d89ca">
+<section id="slide-org7d9cb40">
+<h2 id="org7d9cb40">Context</h2>
+<div class="outline-text-2" id="text-org7d9cb40">
 </div>
 </section>
-<section id="slide-org4c2dfb1">
-<h3 id="org4c2dfb1">What We Do</h3>
+<section id="slide-org2066876">
+<h3 id="org2066876">What We Do</h3>
 <ul>
 <li>Support earthquake researchers at UC Civil and Natural Resources Engineering department.</li>
 <li>Primary focus: Ground motion simulation software.</li>
 
 </ul>
 </section>
-<section id="slide-org6dae8f7">
-<h3 id="org6dae8f7">Cybershake New Zealand</h3>
+<section id="slide-org6117172">
+<h3 id="org6117172">Cybershake New Zealand</h3>
 <iframe height="600" width="800" src="https://www.youtube.com/embed/P7t2u61daPg?si=lIqavPHDV0hXl-Gu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </section>
-<section id="slide-org2844c67">
-<h3 id="org2844c67">Researcher Outputs</h3>
+<section id="slide-orge13a004">
+<h3 id="orge13a004">Researcher Outputs</h3>
 
-<div id="orgfdeba35" class="figure">
-<p><img src="researcher.png" alt="researcher.png" />
+<div id="orgb793158" class="figure">
+<p><img src="researcher.png" alt="researcher.png" height="600px" />
 </p>
 </div>
 </section>
-<section id="slide-org29be03f">
-<h3 id="org29be03f">Big Picture</h3>
+<section id="slide-org418a4b1">
+<h3 id="org418a4b1">Big Picture</h3>
 <dl>
 <dt class="fragment fade-in">Cybershake NZ</dt><dd class="fragment fade-in">Better estimates of seismic hazard; inform EQC and disaster response.</dd>
 <dt class="fragment fade-in">Researcher outputs</dt><dd class="fragment fade-in">Advance geoscience; improve Cybershake.</dd>
@@ -79,21 +79,21 @@ Jake Faulkner
 </section>
 </section>
 <section>
-<section id="slide-org5d983c2">
-<h2 id="org5d983c2">The Old Simulation Stack</h2>
-<div class="outline-text-2" id="text-org5d983c2">
+<section id="slide-org08f2ae8">
+<h2 id="org08f2ae8">The Old Simulation Stack</h2>
+<div class="outline-text-2" id="text-org08f2ae8">
 </div>
 </section>
-<section id="slide-org9b4de1f">
-<h3 id="org9b4de1f">Basic Structure</h3>
+<section id="slide-org7d36cb8">
+<h3 id="org7d36cb8">Basic Structure</h3>
 
-<div id="org9402c9f" class="figure">
+<div id="org02e8adc" class="figure">
 <p><img src="old_workflow.png" alt="old_workflow.png" />
 </p>
 </div>
 </section>
-<section id="slide-org910a63e">
-<h3 id="org910a63e">The Problems</h3>
+<section id="slide-org931ef8d">
+<h3 id="org931ef8d">The Problems</h3>
 <ul>
 <li class="fragment fade-in">Cybershake-centric, unfriendly to researchers.</li>
 <li class="fragment fade-in">Entirely custom solutions for solved problems.</li>
@@ -104,8 +104,8 @@ Jake Faulkner
 </section>
 <section>
 </section>
-<section id="slide-orgb620d40">
-<h3 id="orgb620d40">Reproducing a Three-Year-Old Simulation</h3>
+<section id="slide-orgfc1e2fc">
+<h3 id="orgfc1e2fc">Reproducing a Three-Year-Old Simulation</h3>
 <ol>
 <li class="fragment fade-in">Required our team lead one year,</li>
 <li class="fragment fade-in">Involved special tools to re-derive input values,</li>
@@ -113,20 +113,20 @@ Jake Faulkner
 
 </ol>
 
-<div id="orga79c80a" class="figure">
+<div id="org5a4fd25" class="figure">
 <p><img src="sung.jpg" alt="sung.jpg" class="fragment (fade-in)" />
 </p>
 </div>
 </section>
 </section>
 <section>
-<section id="slide-org852844a">
-<h2 id="org852844a">The New Workflow</h2>
-<div class="outline-text-2" id="text-org852844a">
+<section id="slide-org5ef2ad4">
+<h2 id="org5ef2ad4">The New Workflow</h2>
+<div class="outline-text-2" id="text-org5ef2ad4">
 </div>
 </section>
-<section id="slide-org62dcd88">
-<h3 id="org62dcd88">Container + Workflow + Realisation = Simulation</h3>
+<section id="slide-org79505ff">
+<h3 id="org79505ff">Container + Workflow + Realisation = Simulation</h3>
 <ul>
 <li><b>Container</b>: Reproducible software stack specification.</li>
 <li><b>Workflow</b>: Declarative software execution control.</li>
@@ -134,8 +134,8 @@ Jake Faulkner
 
 </ul>
 </section>
-<section id="slide-org920c6d1">
-<h3 id="org920c6d1">Containerisation</h3>
+<section id="slide-orgdde6d40">
+<h3 id="orgdde6d40">Containerisation</h3>
 <ul>
 <li>Apptainer containers for software deployment.</li>
 <li>All workflow stages within containers.</li>
@@ -143,8 +143,8 @@ Jake Faulkner
 
 </ul>
 </section>
-<section id="slide-org332f2b6">
-<h3 id="org332f2b6">Cylc Workflows</h3>
+<section id="slide-org092bbca">
+<h3 id="org092bbca">Cylc Workflows</h3>
 <div style="float: left; width: 50%">
 <ul>
 <li class="fragment fade-in">Developed at NIWA.</li>
@@ -157,17 +157,17 @@ Jake Faulkner
 
 <div style="float: right; width: 50%">
 
-<div id="org5fd8caf" class="figure">
+<div id="org4025623" class="figure">
 <p><img src="cylc.gif" alt="cylc.gif" />
 </p>
 <p><span class="figure-number">Figure 1: </span>Cylc TUI in Action!</p>
 </div>
 </div>
 </section>
-<section id="slide-orgbade864">
-<h3 id="orgbade864">One-File Simulation Specification</h3>
+<section id="slide-org28d9bd2">
+<h3 id="org28d9bd2">One-File Simulation Specification</h3>
 
-<div id="orgde5746a" class="figure">
+<div id="org4bcd550" class="figure">
 <p><img src="config.png" alt="config.png" />
 </p>
 </div>
@@ -202,8 +202,8 @@ Jake Faulkner
 </pre>
 </div>
 </section>
-<section id="slide-orgbba0430">
-<h3 id="orgbba0430">Workflow Planner</h3>
+<section id="slide-orgb7c0360">
+<h3 id="orgb7c0360">Workflow Planner</h3>
 <ul>
 <li>Workflow stages that compose together enables a flexible workflow planning tool.</li>
 <li>Skip or set a goal for any stage to generate custom research workflows!</li>
@@ -230,13 +230,13 @@ Jake Faulkner
 </section>
 <section>
 
-<div id="org050c9ef" class="figure">
+<div id="orgcdc2df0" class="figure">
 <p><img src="workflow_graph.png" alt="workflow_graph.png" />
 </p>
 </div>
 </section>
-<section id="slide-org5f639f0">
-<h3 id="org5f639f0">Hypothesis Testing</h3>
+<section id="slide-org0195d56">
+<h3 id="org0195d56">Hypothesis Testing</h3>
 <ul>
 <li>Used to test thousands of examples for critical scientific code.</li>
 <li>Potentially saves hundreds of thousands of wasted core-hours.</li>
@@ -254,7 +254,7 @@ Jake Faulkner
 </div>
 </section>
 <section>
-<pre class="example" id="org5ab72e2">
+<pre class="example" id="org263035b">
 n = 40
 
     @given(st.integers(0, 50))
@@ -265,8 +265,8 @@ E       assert False
 </section>
 </section>
 <section>
-<section id="slide-orga515b0c">
-<h2 id="orga515b0c">Key Takeaways</h2>
+<section id="slide-orgdbd5def">
+<h2 id="orgdbd5def">Key Takeaways</h2>
 <ul>
 <li class="fragment fade-in">Make your workflows <b>declarative</b>.</li>
 <li class="fragment fade-in">Make your workflows <b>composable</b>.</li>
