remove cylc tui caption

--- a/eresearch-presentation/eresearch-presentation.html
+++ b/eresearch-presentation/eresearch-presentation.html
@@ -14,29 +14,29 @@
 <div class="reveal">
 <div class="slides">
 <section>
-<section id="slide-orgeb78819">
-<h2 id="orgeb78819">Modernising Earthquake Simulation Workflows</h2>
+<section id="slide-org70a79b1">
+<h2 id="org70a79b1">Modernising Earthquake Simulation Workflows</h2>
 <p>
 Jake Faulkner
 </p>
 <div style="display: grid; grid-template-columns: auto auto auto auto;">
 
-<div id="org26afbc5" class="figure">
+<div id="orgb57d6f8" class="figure">
 <p><img src="coat-of-arms-uc.jpeg" alt="coat-of-arms-uc.jpeg" width="80%" />
 </p>
 </div>
 
-<div id="org6b08a17" class="figure">
+<div id="orgfeb2d94" class="figure">
 <p><img src="QCLogo Standard QC 3 lines 2000ppi.png" alt="QCLogo Standard QC 3 lines 2000ppi.png" width="80%" />
 </p>
 </div>
 
-<div id="org7f7f196" class="figure">
+<div id="org9c3d633" class="figure">
 <p><img src="nhc.png" alt="nhc.png" width="80%" />
 </p>
 </div>
 
-<div id="orgf71c2ad" class="figure">
+<div id="org205d1c7" class="figure">
 <p><img src="NeSI_Logo_RGB.png" alt="NeSI_Logo_RGB.png" width="80%" />
 </p>
 </div>
@@ -44,33 +44,33 @@ Jake Faulkner
 </section>
 </section>
 <section>
-<section id="slide-org7d9cb40">
-<h2 id="org7d9cb40">Context</h2>
-<div class="outline-text-2" id="text-org7d9cb40">
+<section id="slide-org3467b49">
+<h2 id="org3467b49">Context</h2>
+<div class="outline-text-2" id="text-org3467b49">
 </div>
 </section>
-<section id="slide-org2066876">
-<h3 id="org2066876">What We Do</h3>
+<section id="slide-org506775f">
+<h3 id="org506775f">What We Do</h3>
 <ul>
 <li>Support earthquake researchers at UC Civil and Natural Resources Engineering department.</li>
 <li>Primary focus: Ground motion simulation software.</li>
 
 </ul>
 </section>
-<section id="slide-org6117172">
-<h3 id="org6117172">Cybershake New Zealand</h3>
+<section id="slide-org86985ec">
+<h3 id="org86985ec">Cybershake New Zealand</h3>
 <iframe height="600" width="800" src="https://www.youtube.com/embed/P7t2u61daPg?si=lIqavPHDV0hXl-Gu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </section>
-<section id="slide-orge13a004">
-<h3 id="orge13a004">Researcher Outputs</h3>
+<section id="slide-org9e13ad6">
+<h3 id="org9e13ad6">Researcher Outputs</h3>
 
-<div id="orgb793158" class="figure">
+<div id="orgcf50ff6" class="figure">
 <p><img src="researcher.png" alt="researcher.png" height="600px" />
 </p>
 </div>
 </section>
-<section id="slide-org418a4b1">
-<h3 id="org418a4b1">Big Picture</h3>
+<section id="slide-org599e6e5">
+<h3 id="org599e6e5">Big Picture</h3>
 <dl>
 <dt class="fragment fade-in">Cybershake NZ</dt><dd class="fragment fade-in">Better estimates of seismic hazard; inform EQC and disaster response.</dd>
 <dt class="fragment fade-in">Researcher outputs</dt><dd class="fragment fade-in">Advance geoscience; improve Cybershake.</dd>
@@ -79,21 +79,21 @@ Jake Faulkner
 </section>
 </section>
 <section>
-<section id="slide-org08f2ae8">
-<h2 id="org08f2ae8">The Old Simulation Stack</h2>
-<div class="outline-text-2" id="text-org08f2ae8">
+<section id="slide-orgb686839">
+<h2 id="orgb686839">The Old Simulation Stack</h2>
+<div class="outline-text-2" id="text-orgb686839">
 </div>
 </section>
-<section id="slide-org7d36cb8">
-<h3 id="org7d36cb8">Basic Structure</h3>
+<section id="slide-org51e61aa">
+<h3 id="org51e61aa">Basic Structure</h3>
 
-<div id="org02e8adc" class="figure">
+<div id="org6805115" class="figure">
 <p><img src="old_workflow.png" alt="old_workflow.png" />
 </p>
 </div>
 </section>
-<section id="slide-org931ef8d">
-<h3 id="org931ef8d">The Problems</h3>
+<section id="slide-org0fc05e0">
+<h3 id="org0fc05e0">The Problems</h3>
 <ul>
 <li class="fragment fade-in">Cybershake-centric, unfriendly to researchers.</li>
 <li class="fragment fade-in">Entirely custom solutions for solved problems.</li>
@@ -104,8 +104,8 @@ Jake Faulkner
 </section>
 <section>
 </section>
-<section id="slide-orgfc1e2fc">
-<h3 id="orgfc1e2fc">Reproducing a Three-Year-Old Simulation</h3>
+<section id="slide-org86a033b">
+<h3 id="org86a033b">Reproducing a Three-Year-Old Simulation</h3>
 <ol>
 <li class="fragment fade-in">Required our team lead one year,</li>
 <li class="fragment fade-in">Involved special tools to re-derive input values,</li>
@@ -113,20 +113,20 @@ Jake Faulkner
 
 </ol>
 
-<div id="org5a4fd25" class="figure">
+<div id="org88a951c" class="figure">
 <p><img src="sung.jpg" alt="sung.jpg" class="fragment (fade-in)" />
 </p>
 </div>
 </section>
 </section>
 <section>
-<section id="slide-org5ef2ad4">
-<h2 id="org5ef2ad4">The New Workflow</h2>
-<div class="outline-text-2" id="text-org5ef2ad4">
+<section id="slide-orgd751b38">
+<h2 id="orgd751b38">The New Workflow</h2>
+<div class="outline-text-2" id="text-orgd751b38">
 </div>
 </section>
-<section id="slide-org79505ff">
-<h3 id="org79505ff">Container + Workflow + Realisation = Simulation</h3>
+<section id="slide-orgc716fbb">
+<h3 id="orgc716fbb">Container + Workflow + Realisation = Simulation</h3>
 <ul>
 <li><b>Container</b>: Reproducible software stack specification.</li>
 <li><b>Workflow</b>: Declarative software execution control.</li>
@@ -134,8 +134,8 @@ Jake Faulkner
 
 </ul>
 </section>
-<section id="slide-orgdde6d40">
-<h3 id="orgdde6d40">Containerisation</h3>
+<section id="slide-orgdddb1be">
+<h3 id="orgdddb1be">Containerisation</h3>
 <ul>
 <li>Apptainer containers for software deployment.</li>
 <li>All workflow stages within containers.</li>
@@ -143,8 +143,8 @@ Jake Faulkner
 
 </ul>
 </section>
-<section id="slide-org092bbca">
-<h3 id="org092bbca">Cylc Workflows</h3>
+<section id="slide-org7a4981a">
+<h3 id="org7a4981a">Cylc Workflows</h3>
 <div style="float: left; width: 50%">
 <ul>
 <li class="fragment fade-in">Developed at NIWA.</li>
@@ -157,17 +157,16 @@ Jake Faulkner
 
 <div style="float: right; width: 50%">
 
-<div id="org4025623" class="figure">
+<div id="org6c9bdc5" class="figure">
 <p><img src="cylc.gif" alt="cylc.gif" />
 </p>
-<p><span class="figure-number">Figure 1: </span>Cylc TUI in Action!</p>
 </div>
 </div>
 </section>
-<section id="slide-org28d9bd2">
-<h3 id="org28d9bd2">One-File Simulation Specification</h3>
+<section id="slide-org0ce8a52">
+<h3 id="org0ce8a52">One-File Simulation Specification</h3>
 
-<div id="org4bcd550" class="figure">
+<div id="orge6e3f89" class="figure">
 <p><img src="config.png" alt="config.png" />
 </p>
 </div>
@@ -202,8 +201,8 @@ Jake Faulkner
 </pre>
 </div>
 </section>
-<section id="slide-orgb7c0360">
-<h3 id="orgb7c0360">Workflow Planner</h3>
+<section id="slide-org6150fb5">
+<h3 id="org6150fb5">Workflow Planner</h3>
 <ul>
 <li>Workflow stages that compose together enables a flexible workflow planning tool.</li>
 <li>Skip or set a goal for any stage to generate custom research workflows!</li>
@@ -230,13 +229,13 @@ Jake Faulkner
 </section>
 <section>
 
-<div id="orgcdc2df0" class="figure">
+<div id="orgcc12ad1" class="figure">
 <p><img src="workflow_graph.png" alt="workflow_graph.png" />
 </p>
 </div>
 </section>
-<section id="slide-org0195d56">
-<h3 id="org0195d56">Hypothesis Testing</h3>
+<section id="slide-orgd4fea0e">
+<h3 id="orgd4fea0e">Hypothesis Testing</h3>
 <ul>
 <li>Used to test thousands of examples for critical scientific code.</li>
 <li>Potentially saves hundreds of thousands of wasted core-hours.</li>
@@ -254,7 +253,7 @@ Jake Faulkner
 </div>
 </section>
 <section>
-<pre class="example" id="org263035b">
+<pre class="example" id="org7d7a1cc">
 n = 40
 
     @given(st.integers(0, 50))
@@ -265,8 +264,8 @@ E       assert False
 </section>
 </section>
 <section>
-<section id="slide-orgdbd5def">
-<h2 id="orgdbd5def">Key Takeaways</h2>
+<section id="slide-orgcbc18bd">
+<h2 id="orgcbc18bd">Key Takeaways</h2>
 <ul>
 <li class="fragment fade-in">Make your workflows <b>declarative</b>.</li>
 <li class="fragment fade-in">Make your workflows <b>composable</b>.</li>
